fixed aos whitespace

--- a/components/About/index.module.scss
+++ b/components/About/index.module.scss
@@ -23,6 +23,10 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
+
+        @media screen and (max-width: 800px) {
+            width: 100%;
+        }
     }
 
     .left {
